# llman

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Cargo.toml  NOTICE  README.md  RELEASE_NOTES_v0.0.60.md  _HANDOFF.md  _QA_REPORT.md  _REPORT.md  _SEQ.md  _SUMMARY.md  _TODO.md  justfile  rust-toolchain.toml
.agents/skills/llman-sdd-apply/: SKILL.md
.agents/skills/llman-sdd-apply-cycle/: SKILL.md
.agents/skills/llman-sdd-arch-review/: SKILL.md
.agents/skills/llman-sdd-archive/: SKILL.md
.agents/skills/llman-sdd-explore/: SKILL.md
.agents/skills/llman-sdd-graph/: SKILL.md
.agents/skills/llman-sdd-onboard/: SKILL.md
.agents/skills/llman-sdd-propose/: SKILL.md
.agents/skills/llman-sdd-quick/: SKILL.md
.agents/skills/llman-sdd-research/: SKILL.md
.agents/skills/llman-sdd-solidify/: SKILL.md
.agents/skills/llman-sdd-specs-compact/: SKILL.md
.agents/skills/llman-sdd-verify/: SKILL.md
.agents/skills/llman-sdd-wayfinder/: SKILL.md
.claude/commands/opsx/: apply.md  archive.md  bulk-archive.md  continue.md  explore.md  ff.md  new.md  onboard.md  sync.md  verify.md
.claude/skills/openspec-archive-change/: SKILL.md
.claude/skills/openspec-explore/: SKILL.md
.claude/skills/openspec-ff-change/: SKILL.md
.claude/skills/openspec-new-change/: SKILL.md
.claude/skills/openspec-propose/: SKILL.md
.claude/skills/openspec-sync-specs/: SKILL.md
.claude/skills/openspec-verify-change/: SKILL.md
.codex/skills/openspec-apply-change/: SKILL.md
.codex/skills/openspec-archive-change/: SKILL.md
.codex/skills/openspec-bulk-archive-change/: SKILL.md
.codex/skills/openspec-explore/: SKILL.md
.codex/skills/openspec-onboard/: SKILL.md
.config/: nextest.toml
.cursor/rules/: default-rules.mdc
.github/workflows/: ci.yaml  lint.yaml
.llman/: config.yaml
FR/: FR-001-deferred-task-continuity.md
agentdev/: README.md
agentdev/docker/sdd-claude-style-eval/: Dockerfile  README.md  run.sh
agentdev/eval/: .gitignore  README.md  package.json  run.ts
agentdev/eval/cases/: gen-from-archive.ts
agentdev/eval/lib/: llman.ts  metrics.ts  pi-retriever.ts  report.ts  types.ts
agentdev/promptfoo/: README.md  package.json  pnpm-lock.yaml  run-sdd-claude-style-eval.sh  run-sdd-prompts-eval.sh
agentdev/promptfoo/sdd_apply_v1/: promptfooconfig.yaml
agentdev/promptfoo/sdd_llmanspec_styles_v1/: README.md  promptfooconfig.yaml  tests.yaml
agentdev/promptfoo/sdd_llmanspec_styles_v2/: README.md  promptfooconfig.yaml  tests.yaml
artifacts/llman_config_dev/: .llman_protection  README.md  metadata.toml
artifacts/llman_config_dev/profiles/: prod.toml  test.toml
artifacts/llman_dev_config/: codex-profiles.toml  codex.toml
artifacts/testing_config_home/: config.yaml
artifacts/testing_config_home/promptfoo/: default_models.txt
docs/: arena.md  config.md  sdd-context-index.md  sdd-prompt-engineering.md  skills-registry-presets.md  usage-stats.md
docs/agent-tools-contexts/: README.md
docs/agent-tools-contexts/_raw/: FETCH_CHECKLIST.md  README.md
docs/agent-tools-contexts/claudecode/: README.md
docs/agent-tools-contexts/codex/: README.md
docs/agent-tools-contexts/cursor/: README.md
docs/plan/: 250526-mvp-v0.0.1.md  250530-新命令来加工处理cursor导出的对话.md  250712-新增一个通用命令可以收集指定目录的文件结构信息方便给LLM.md  251216-增加cc的run子命令用于转发参数给claude命令.md  251216-增加一个自动检查cc当前项目的配置中有没有Allow-rm等高危命令的警告.md  251219-清理无用命令和tool命令优化.md  _future.md  tool-clean-useless-comments.md
docs/plan/archive/: 250526-mvp.md  250530-新命令来加工处理cursor导出的对话.md  251120-增加llm-x-codex管理多账号相关命令.md  251216-增加cc的run子命令用于转发参数给claude命令.md  251216-重新设计llman-x-codex功能以支持OpenAI-Codex配置系统.md  251218-codex命令增强体验重构.md  251219-清理无用命令和tool命令优化.md
docs/plans/: 2026-04-08-sync-ignore-unified-design.md
docs/release/partitioned-ssot/: MIGRATION.md  (+4 more)
docs/sdd/: README.md  pipeline-bdd-off.md  pipeline-bdd-on.md
docs/temp/: TODO.md
llmanspec/: AGENTS.md  config.yaml
locales/: app.yml
openspec/: config.yaml  project.md
scripts/: check-i18n.sh  check-sdd-templates.py  check-skills-version.py  embed_chunks.py  migrate-openspec-to-llmanspec.py  sdd-claude-style-eval.sh  sdd-prompts-eval.sh
src/: arg_utils.rs  cli.rs  config.rs  config_schema.rs  editor.rs  env_safety.rs  error.rs  fs_utils.rs  lib.rs  main.rs  managed_block.rs  path_utils.rs  prompt.rs  self_command.rs  test_utils.rs
src/agents/: codegen.rs  command.rs  manifest.rs  mod.rs
src/prompts/: confirm.rs  managed_file.rs  mod.rs  paths.rs  store.rs
src/sdd/: archive.rs  command.rs  config.rs  constants.rs  discovery.rs  fs_utils.rs  init.rs  interactive.rs  list.rs  mod.rs  parser.rs  show.rs  solidify.rs  staleness.rs  templates.rs  update.rs  update_skills.rs  validate.rs  validation.rs
src/skills/: command.rs  config.rs  hash.rs  interactive.rs  mod.rs  registry.rs  scan.rs  sync.rs  types.rs
src/tool/: clean_comments.rs  command.rs  config.rs  mod.rs  processor.rs  rm_empty_dirs.rs  sync_ignore.rs  tree_sitter_processor.rs
src/usage_stats/: aggregate.rs  mod.rs  model.rs  path_display.rs  query.rs  render.rs  tui.rs
src/x/: mod.rs
templates/claude-code/: default.toml
templates/codex/: custom.toml  default.toml  minimax.toml  rightcode.toml
templates/sdd/: llmanspec-managed-block.md
templates/sdd-legacy/: llmanspec-managed-block.md  project.md
tests/: agents_codegen_tests.rs  agents_new_tests.rs  arena_tests.rs  bdd_steps.rs  claude_code_account_edit_tests.rs  claude_code_account_env_tests.rs  claude_code_forward_args_tests.rs  claude_code_stats_tests.rs  cli_tests.rs  codex_stats_tests.rs  common.rs  config_tests.rs  configuration_tests.rs  cursor_stats_tests.rs  env_lock.rs  error_tests.rs  integration_tests.rs  path_validation_tests.rs  performance_tests.rs  print_config_dir_path_tests.rs  processor_tests.rs  prompt_tests.rs  promptfoo_tests.rs  prompts_orchestrator_tests.rs  rm_empty_dirs_tests.rs  sdd_bdd_compat_tests.rs  sdd_eval_tests.rs  sdd_integration_tests.rs  skills_integration_tests.rs  skills_targets_sync_tests.rs  tool_tests.rs  tree_sitter_tests.rs  x_module_tests.rs
tools/fake-acp-agent/: Cargo.toml
(+1583 files in other folders)
