[package]
name = "llman"
version = "0.0.22"
# Project is pinned to a nightly toolchain in rust-toolchain.toml
# CI must use the same pinned nightly baseline
edition = "2024"
authors = ["L8ng <straydragonl@foxmail.com>"]
description = "A tool for managing LLM application rules(prompts) ..."
license = "MIT"
repository = "https://github.com/StrayDragon/llman"

[[bin]]
name = "llman"
path = "src/main.rs"

[lib]
name = "llman"
path = "src/lib.rs"

[features]
# NOTE: `arena` requires network/LLM dependencies in the default build.
# Keep `agents-ai` as a behavior flag for `llman agents new --ai` only.
agents-ai = []

[dependencies]
anyhow = "1.0.101"
adk-core = "0.3.1"
adk-model = { version = "0.3.1", default-features = false, features = ["openai"] }
clap = { version = "4.5.57", features = [
    "deprecated",
    "env",
    "unicode",
    "wrap_help",
    "string",
    "cargo",
    "derive",
] }
clap_complete = "4.5.65"
inquire = { version = "0.9.3", features = ["editor"] }
crossterm = "0.29.0"
ratatui = "0.30.0"
comfy-table = "7.2.2"
thiserror = "2.0.18"
rust-i18n = "3.1.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "0.9.11"
minijinja = "2.16.0"
diesel = { version = "2.3.6", features = ["sqlite", "chrono"] }
chrono = { version = "0.4.43", features = ["serde"] }
glob = "0.3.3"
ignore = "0.4.25"
futures = "0.3.31"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "time"] }
reqwest = { version = "0.12.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
tempfile = "3.24.0"

# Comment processing and parsing
tree-sitter = "0.26.5"
tree-sitter-highlight = "0.26.5"
tree-sitter-javascript = "0.25.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.0"
tree-sitter-go = "0.25.0"

# Configuration and validation
schemars = { version = "1.2.1", features = ["derive"] }
jsonschema = "0.41.0"

# JSON parsing and repair
llm_json = "1.0.2"

# Additional utilities
regex = "1.12.3"
serde_yaml = "0.9.34"
sevenz-rust2 = "0.20.2"

[dev-dependencies]
expectrl = "0.5.2"

# Keep `target/` growth in check:
# - Compile workspace code with enough debug info for useful backtraces.
# - Compile third-party dependencies with no debug info to significantly reduce
#   `target/**/deps` disk usage.
#
# See: https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.dev]
debug = 1

[profile.dev.package."*"]
debug = 0

[profile.test]
debug = 1

[profile.test.package."*"]
debug = 0
