[package]
name = "llman"
version = "0.0.24"
# Project is pinned to a nightly toolchain in rust-toolchain.toml
# CI must use the same pinned nightly baseline
edition = "2024"
default-run = "llman"
authors = ["L8ng <straydragonl@foxmail.com>"]
description = "A tool for managing LLM application rules(prompts) ..."
license = "MIT"
repository = "https://github.com/StrayDragon/llman"

[[bin]]
name = "llman"
path = "src/main.rs"

[lib]
name = "llman"
path = "src/lib.rs"

[features]
# Keep `agents-ai` as a behavior flag for `llman agents new --ai` only.
agents-ai = []

[dependencies]
anyhow = "1.0.102"
adk-core = "0.3.2"
adk-model = { version = "0.3.2", default-features = false, features = ["openai"] }
clap = { version = "4.5.60", features = [
    "deprecated",
    "env",
    "unicode",
    "wrap_help",
    "string",
    "cargo",
    "derive",
] }
clap_complete = "4.5.66"
inquire = { version = "0.9.4", features = ["editor"] }
crossterm = "0.29.0"
ratatui = "0.30.0"
comfy-table = "7.2.2"
thiserror = "2.0.18"
rust-i18n = "3.1.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "1.0.3"
minijinja = "2.16.0"
diesel = { version = "2.3.6", features = ["sqlite", "chrono"] }
chrono = { version = "0.4.44", features = ["serde"] }
glob = "0.3.3"
ignore = "0.4.25"
futures = "0.3.32"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "time"] }
tokio-util = { version = "0.7.18", features = ["compat"] }
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "json", "rustls"] }
tempfile = "3.26.0"
sha2 = "0.10.9"

# Comment processing and parsing
tree-sitter = "0.26.6"
tree-sitter-highlight = "0.26.6"
tree-sitter-javascript = "0.25.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.0"
tree-sitter-go = "0.25.0"

# Configuration and validation
schemars = { version = "1.2.1", features = ["derive", "indexmap2"] }
jsonschema = "0.44.0"

# JSON parsing and repair
llm_json = "1.0.2"

# ISON parsing and dumping
ison-rs = "1.0.1"

# Additional utilities
regex = "1.12.3"
serde_yaml = "0.9.34"
serde_toon_format = "0.1.2"
yamlpatch = "0.13.0"
yamlpath = "0.34.0"
sevenz-rust2 = "0.20.2"
agent-client-protocol = "0.9.4"
async-trait = "0.1.89"
indexmap = { version = "2.13.0", features = ["serde"] }

[dev-dependencies]
expectrl = "0.8.0"

# Keep `target/` growth in check:
# - Compile workspace code with enough debug info for useful backtraces.
# - Compile third-party dependencies with no debug info to significantly reduce
#   `target/**/deps` disk usage.
#
# See: https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.dev]
debug = 1

[profile.dev.package."*"]
debug = 0

[profile.test]
debug = 1

[profile.test.package."*"]
debug = 0
